Refactored group runs cancel
