# modules/framework/galasa-parent/dev.galasa.framework.api.runs/src/main/java/dev/galasa/framework/api/runs/routes/GroupRunsRoute.java
@@ -6,9 +6,11 @@
 package dev.galasa.framework.api.runs.routes;
 
 import java.io.IOException;
+import java.nio.charset.StandardCharsets;
 import java.util.List;
 
 import javax.servlet.ServletException;
+import javax.servlet.ServletInputStream;
 import javax.servlet.http.HttpServletRequest;
 import javax.servlet.http.HttpServletResponse;
 
@@ -19,11 +21,15 @@ import dev.galasa.framework.api.common.HttpRequestContext;
 import dev.galasa.framework.api.common.InternalServletException;
 import dev.galasa.framework.api.common.QueryParameters;
 import dev.galasa.framework.api.common.ResponseBuilder;
+import dev.galasa.framework.api.common.RunStatusUpdate;
 import dev.galasa.framework.api.common.ServletError;
+import dev.galasa.framework.api.runs.common.GroupRunActionJson;
+import dev.galasa.framework.api.runs.common.GroupRunActionStatus;
 import dev.galasa.framework.api.runs.common.GroupRuns;
 import dev.galasa.framework.spi.FrameworkException;
 import dev.galasa.framework.spi.IFramework;
 import dev.galasa.framework.spi.IRun;
+import dev.galasa.framework.spi.ResultArchiveStoreException;
 import dev.galasa.framework.spi.rbac.RBACException;
 import dev.galasa.framework.spi.utils.GalasaGson;
 
@@ -81,6 +87,70 @@ public class GroupRunsRoute extends GroupRuns{
         }
         ScheduleStatus scheduleStatus = scheduleRun(scheduleRequest, groupName.substring(1), requestor);
         return getResponseBuilder().buildResponse(request, response, "application/json", gson.toJson(scheduleStatus), HttpServletResponse.SC_CREATED);
+    }
+
+    @Override
+    public HttpServletResponse handlePutRequest(String groupName, HttpRequestContext requestContext,
+            HttpServletResponse res) throws ServletException, IOException, FrameworkException {
+
+        HttpServletRequest request = requestContext.getRequest();
+        String strippedGroupName = groupName.substring(1); //remove leading slash
+
+        GroupRunActionJson runAction = getRunActionFromRequestBody(request);
+        String responseBody = updateRunStatus(strippedGroupName, runAction);
+
+        int responseStatusCode = HttpServletResponse.SC_ACCEPTED;
+        
+        if (responseBody.isBlank()) {
+            responseStatusCode = HttpServletResponse.SC_OK;
+            responseBody = String.format(GAL5430_GROUP_RUNS_ALREADY_FINISHED.toString(), strippedGroupName);
+        }
+
+        return getResponseBuilder().buildResponse(request, res, "text/plain", responseBody, responseStatusCode);
+    }
+
+    private String updateRunStatus(String groupId, GroupRunActionJson runAction)
+            throws InternalServletException, ResultArchiveStoreException {
+
+        String responseBody = "";
+        List<IRun> groupedRuns = getRuns(groupId);
+        GroupRunActionStatus cancelAction = GroupRunActionStatus.getfromString(runAction.getResult());
+        String result = runAction.getResult();
+        RunStatusUpdate runStatusUpdate = new RunStatusUpdate(framework);
+                
+        if (groupedRuns != null && !groupedRuns.isEmpty()) {
+
+            for (IRun run : groupedRuns) {
+
+                String runName = run.getName();
+
+                if (cancelAction != GroupRunActionStatus.CANCELLED) {
+                    ServletError error = new ServletError(GAL5431_INVALID_CANCEL_UPDATE_REQUEST, runAction.getResult());
+                    throw new InternalServletException(error, HttpServletResponse.SC_BAD_REQUEST);
+                } else if (cancelAction.equals(GroupRunActionStatus.CANCELLED)) {
+                    runStatusUpdate.cancelRun(runName, result);
+                    logger.info("Run cancelled by external source.");
+                }
+
+            }
+
+            responseBody = String.format("The request to cancel run with group id %s has been received.",
+                            groupId);
+
+        }
+
+        return responseBody;
+    }
+
+    private GroupRunActionJson getRunActionFromRequestBody(HttpServletRequest request) throws IOException{
+
+        ServletInputStream body = request.getInputStream();
+        String jsonString = new String(body.readAllBytes(), StandardCharsets.UTF_8);
+        body.close();
+        GroupRunActionJson runAction = gson.fromJson(jsonString, GroupRunActionJson.class);
+
+        return runAction;
+
     }
 
 }
